package NKikimrQueryStats;
option java_package = "ru.yandex.kikimr.proto";

message TReadOpStats {
    optional uint64 Count = 1;
    optional uint64 Rows = 2;
    optional uint64 Bytes = 3;
    // TODO: optional uint64 PagesFromCache = 4;
    // TODO: optional uint64 PagesFromDisk = 5;
}

message TWriteOpStats {
    optional uint64 Count = 1;
    optional uint64 Rows = 2;
    optional uint64 Bytes = 3;
}

message TTableInfo {
    optional uint64 SchemeshardId = 1;
    optional uint64 PathId = 2;
    optional string Name = 3;
}

message TTableAccessStats {
    optional TTableInfo TableInfo = 1;

    optional TReadOpStats SelectRow = 2;
    optional TReadOpStats SelectRange = 3;
    optional TWriteOpStats UpdateRow = 4;
    optional TWriteOpStats EraseRow = 5;
    optional uint64 ShardCount = 6;
}

message TPerShardStats {
    optional uint64 ShardId = 1;
    optional uint64 CpuTimeUsec = 2;
    optional uint64 OutgoingReadSetsCount = 3;
    optional uint64 ProgramSize = 4;
    optional uint64 ReplySize = 5;
}

message TTxStats {
    repeated TTableAccessStats TableAccessStats = 1;
    optional uint64 DurationUs = 2;
    optional uint64 ComputeCpuTimeUsec = 3;
    repeated TPerShardStats PerShardStats = 4;

    // TODO:
    // optional uint64 CommitLatencyUsec = 3;
    // optional uint64 LogBytesWritten = 4;
}
